src/smite.h

#define WORD_SIZE DEFAULT_WORD_SIZE
typedef uint8_t smite_BYTE;
typedef int32_t smite_WORD;
typedef uint32_t smite_UWORD;
typedef int64_t smite_WORD;
typedef uint64_t smite_UWORD;
// VM registers
typedef struct {
#define R(reg, type, utype) type reg;
#define R_RO(reg, type, utype) R(reg, type, utype)
#include "registers.h"
#undef R
#undef R_RO
    smite_WORD *memory;
    int main_argc;
    char **main_argv;
} smite_state;
#define R(reg, type, utype)                     \
    R_RO(reg, type, utype)                      \
    void smite_set_ ## reg(smite_state *S, type val);
// Errors
enum {
    SMITE_ERR_OK = 0,
    SMITE_ERR_INVALID_OPCODE = 1,
    SMITE_ERR_STACK_OVERFLOW = 2,
    SMITE_ERR_STACK_READ = 3,
    SMITE_ERR_STACK_WRITE = 4,
    SMITE_ERR_MEMORY_READ = 5,
    SMITE_ERR_MEMORY_WRITE = 6,
    SMITE_ERR_MEMORY_UNALIGNED = 7,
    SMITE_ERR_DIVISION_BY_ZERO = 8,
    SMITE_ERR_HALT = 128,
};
// Utility functions

smite_UWORD smite_align(smite_UWORD addr);
/* Return `addr` aligned to the next word boundary. */

int smite_is_aligned(smite_UWORD addr);
// Memory access

uint8_t *smite_native_address_of_range(smite_state *S, smite_UWORD addr, smite_UWORD len);
/* Return a host pointer to the VM address `addr`, or `NULL` if any address
   in the range [addr, addr+len] is invalid.
*/

int smite_load_word(smite_state *S, smite_UWORD addr, smite_WORD *val_ptr);
/* Load the word at `addr` into the word pointed to by `val_ptr`.

   Return 0 if OK, or error code if `addr` is invalid or unaligned.
*/

int smite_store_word(smite_state *S, smite_UWORD addr, smite_WORD val);
/* Store the word `val` at virtual address `addr`.

   Return 0 if OK, or error code if `addr` is invalid or unaligned.
*/

int smite_load_byte(smite_state *S, smite_UWORD addr, smite_BYTE *val_ptr);
/* Load the byte at `addr` into the byte pointed to by `val_ptr`.

   Return 0 if OK, or error code if `addr` is invalid.
*/

int smite_store_byte(smite_state *S, smite_UWORD addr, smite_BYTE val);
static inline int store_byte(smite_state *S, smite_UWORD addr, smite_BYTE val)
{
    if (addr >= S->MEMORY) {
        S->BAD = addr;
        return SMITE_ERR_MEMORY_WRITE;
    }

    ((smite_BYTE *)S->memory)[addr] = val;
    return SMITE_ERR_OK;
}
// Stack access

int smite_load_stack(smite_state *S, smite_UWORD pos, smite_WORD *val_ptr);
/* Load the word position `pos` on the stack into the word pointed to by
   `val_ptr`.

   Return 0 if OK, or error code if `pos` is invalid.
*/

int smite_store_stack(smite_state *S, smite_UWORD pos, smite_WORD val);
/* Store the word `val` into the word at position `pos` on the stack.

   Return 0 if OK, or error code if `addr` is invalid.
*/

int smite_pop_stack(smite_state *S, smite_WORD *val_ptr);
/* Load the word at position `0` on the stack into the word pointed to by
   `val_ptr`, and decrement `STACK_DEPTH`.

   Return 0 if OK, or error code if position `0` is invalid.
 */

int smite_push_stack(smite_state *S, smite_WORD val);
// VM instantiation and control

smite_state *smite_init(size_t memory_size, size_t stack_size);
/* Resize the stack of a state.

   - state - the state to change
   - stack_size - number of words of stack required

   Return 0 on success, or -1 if the requested memory cannot be allocated.

   Any new memory is zeroed.
*/

void smite_destroy(smite_state *S);
/* Destroy the given state, deallocating its memory. */

smite_WORD smite_run(smite_state *S);
/* Start the execution cycle in the given state as described in the spec.
   If an error is raised, the code is returned.
*/

smite_WORD smite_single_step(smite_state *S);
/* Execute a single pass of the execution cycle in the given state.
   Return 128 if execution completes without error, or the error code.
*/

ptrdiff_t smite_load_object(smite_state *S, smite_UWORD addr, int fd);
/* Load an object file into a state.

   - state - the state to load into
   - addr - the address at which to load the object file
   - fd - the file descriptor to load from

   Return the number of bytes of code loaded, or one of the following
   errors:

   -1: error reading the object file
   -2: module is invalid
   -3: current implementation is incompatible with the module (for example,
       the word size or `ENDISM` is incompatible)
   -4: the code will not fit into memory at the address given, or the
       address is out of range or unaligned.

   As an extension to the specification, if an object file starts with the
   ASCII bytes `#!`, then it is assumed to be the start of a UNIX-style
   “hash bang” line, and the file contents up to and including the first
   newline character is ignored.
*/

int smite_save_object(smite_state *S, smite_UWORD addr, smite_UWORD len, int fd);
/* Save some memory as an object file.

   - state - the state to save from
   - addr, len - the area of memory to save
   - fd - the file descriptor to save to

   Return 0 on success, or one of the following errors:

   -1: error writing the object file
   -2: `addr` or `len` is invalid
*/

int smite_register_args(smite_state *S, int argc, char *argv[]);